--- a/r13y/Cargo.toml
+++ b/r13y/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 authors = ["Graham Christensen <graham@grahamc.com>"]
 
 [dependencies]
+env_logger = "0.6.0"
+log = "0.4.6"
+serde = "1.0.87"
+serde_derive = "1.0.87"
+serde_json = "1.0.38"
+rand = "0.6.5"
+digest = "0.8.0"
+sha2 = "0.8.0"
+tempdir = "0.3.7"
+chrono = "0.4.6"
