--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "r13y"
 version = "0.1.0"
+edition = "2018"
 authors = ["Graham Christensen <graham@grahamc.com>"]
 
 [dependencies]
