--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,15 @@ edition = "2018"
 authors = ["Graham Christensen <graham@grahamc.com>"]
 
 [dependencies]
-env_logger = "0.6.0"
-log = "0.4.6"
-serde = "1.0.87"
-serde_derive = "1.0.87"
-serde_json = "1.0.38"
-rand = "0.6.5"
-digest = "0.8.0"
+env_logger = "0.6.2"
+log = "0.4.8"
+serde = "1.0.89"
+serde_derive = "1.0.89"
+serde_json = "1.0.40"
+rand = "0.7.0"
+digest = "0.8.1"
 sha2 = "0.8.0"
 tempdir = "0.3.7"
-chrono = "0.4.6"
+chrono = "0.4.7"
+structopt = "0.2.18"
+itertools = "0.8.0"
